--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jameson Lee
 
 # Short bio or description (displayed in the header)
-description: Blogger and
+description: Systems Thinker, Data Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/6571170?s=400&u=6be4e68f06c163669a730393e0ab2165fd2dd419&v=4
