updated email to correct forwarding address.

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars3.githubusercontent.com/u/6571170?s=400&u=6be4e68f06c1636
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: better.thinking@mimo.training
+  email: jameson.lee@emergence.studio
   facebook:
   flickr:
   github: jamesonl/jamesonl.github.io
