Revert site to retro monochrome and add README notebook

--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,20 @@ url: jamesonl.github.io
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
 
+# Collections
+collections:
+  readmes:
+    output: true
+    permalink: /readmes/:name/
+
+# Default values
+defaults:
+  - scope:
+      path: ""
+      type: readmes
+    values:
+      layout: page
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
